# MobileManipulation

./: README.md
src/joint_commander/: README.md  package.xml  setup.cfg  setup.py
src/joint_commander/joint_commander/: publish_joint_angles.py  task_1.py
src/joint_commander/launch/: joint_publisher.launch.py  task_2.launch.py
src/motion_commander/: CMakeLists.txt  README.md  package.xml
src/motion_commander/config/: linear_motion_params.yaml  tracking_motion_params.yaml
src/motion_commander/launch/: linear_motion.launch.py  tracking_motion.launch.py
src/motion_commander/src/: motion_generator_node.cpp  tracking_generator_node.cpp
src/robot_model/: CMakeLists.txt  README.md  package.xml
src/robot_model/config/: initial_positions.yaml  ur5_controllers.yaml
src/robot_model/launch/: gazebo_ur5.launch.py  task_1.launch.py  task_2a.launch.py  task_2b.launch.py  view_ur5.launch.py
src/robot_model/rviz/: view_ur5.rviz
src/robot_model/urdf/: ur5.ros2_control.xacro  ur5.urdf.xacro  ur5_macro.xacro
